fixed 'Pages: Extra space around link icons in the Page Editor'

--- a/static/custom/pad.css
+++ b/static/custom/pad.css
@@ -20,6 +20,7 @@
   background: none;
   border: none;
   padding: 4px 1px;
+  cursor: auto;
 }
 
 #editbar ul .select {
